--- a/public/assets/ui/frontend/css/style.css
+++ b/public/assets/ui/frontend/css/style.css
@@ -2896,7 +2896,17 @@ ol {
 	font-size: 18px;
 	letter-spacing: 2px;
 }
+/* Custome */
+.cart-item-image {
+    width: 100px;
+    height: 100px;
+    object-fit:contain; /* Preserve aspect ratio and fill the container */
+    display: block;
+    margin: 0 auto;
+}
 
+
+/* End Custome */
 /*--------------------------------- Responsive Media Quaries -----------------------------*/
 
 @media only screen and (min-width: 1200px) {
