--- a/public/assets/ui/frontend/css/style.css
+++ b/public/assets/ui/frontend/css/style.css
@@ -2242,6 +2242,34 @@ ol {
 .checkout__order .checkout__order__subtotal span {
 	float: right;
 }
+.checkout__order .checkout__order__discount {
+	font-size: 15px;
+	color: #6f6f6f;
+	font-weight: 700;
+	border-bottom: 1px solid #e1e1e1;
+	/* border-top: 1px solid #e1e1e1; */
+	padding-bottom: 15px;
+	margin-bottom: 15px;
+	/* padding-top: 15px; */
+}
+
+.checkout__order .checkout__order__discount span {
+	float: right;
+}
+.checkout__order .checkout__order__delivery_fee {
+	font-size: 15px;
+	color: #7fad39;
+	font-weight: 700;
+	border-bottom: 1px solid #e1e1e1;
+	/* border-top: 1px solid #e1e1e1; */
+	padding-bottom: 15px;
+	margin-bottom: 15px;
+	/* padding-top: 15px; */
+}
+
+.checkout__order .checkout__order__delivery_fee span {
+	float: right;
+}
 
 .checkout__order .checkout__input__checkbox label {
 	padding-left: 20px;
