--- a/public/assets/ui/frontend/css/style.css
+++ b/public/assets/ui/frontend/css/style.css
@@ -390,19 +390,111 @@ ol {
 	padding: 5px 10px;
 }
 
-.header__top__right__auth {
+/* .header__top__right__auth {
 	display: inline-block;
+} */
+.header__top__right__auth {
+	position:absolute;
+	display: inline-block;
+	margin-right: 40px;
+	cursor: pointer;
 }
-
 .header__top__right__auth a {
 	display: block;
 	font-size: 14px;
 	color: #1c1c1c;
 }
 
-.header__top__right__auth a i {
+.header__top__right__auth i {
 	margin-right: 6px;
 }
+
+.header__top__right__auth:hover ul {
+	top: 23px;
+	opacity: 1;
+	visibility: visible;
+}
+
+.header__top__right__auth:after {
+	position: absolute;
+	right: -21px;
+	top: 1px;
+	height: 20px;
+	width: 1px;
+	background: #000000;
+	opacity: 0.1;
+	content: "";
+}
+
+.header__top__right__auth img {
+	margin-right: 6px;
+}
+
+.header__top__right__auth div {
+	font-size: 14px;
+	color: #1c1c1c;
+	display: inline-block;
+	margin-right: 4px;
+}
+
+.header__top__right__auth span {
+	font-size: 14px;
+	color: #1c1c1c;
+	position: relative;
+	top: 2px;
+}
+
+.header__top__right__auth ul {
+	background: #222222;
+	width: 100px;
+	text-align: left;
+	padding: 5px 0;
+	position: absolute;
+	left: 0;
+	top: 43px;
+	z-index: 9;
+	opacity: 0;
+	visibility: hidden;
+	-webkit-transition: all, 0.3s;
+	-moz-transition: all, 0.3s;
+	-ms-transition: all, 0.3s;
+	-o-transition: all, 0.3s;
+	transition: all, 0.3s;
+}
+
+.header__top__right__auth ul li {
+	list-style: none;
+}
+
+.header__top__right__auth ul li a {
+	font-size: 14px;
+	color: #ffffff;
+	padding: 5px 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .header__logo {
 	padding: 15px 0;
@@ -475,7 +567,7 @@ ol {
 }
 
 .header__menu ul li a {
-	font-size: 14px;
+	font-size: 15px;
 	color: #252525;
 	text-transform: uppercase;
 	font-weight: 700;
@@ -485,7 +577,7 @@ ol {
 	-ms-transition: all, 0.3s;
 	-o-transition: all, 0.3s;
 	transition: all, 0.3s;
-	padding: 5px 0;
+	padding: 10px 0;
 	display: block;
 }
 
