--- a/public/assets/ui/frontend/css/style.css
+++ b/public/assets/ui/frontend/css/style.css
@@ -167,7 +167,43 @@ ol {
 	background: #7fad39;
 	letter-spacing: 2px;
 }
-
+/* .custom-black-btn {
+	display: inline-block;
+	font-size: 14px;
+	padding: 10px 28px 10px;
+	color: #ffffff;
+	text-transform: uppercase;
+	font-weight: 700;
+	background: #000000;
+	letter-spacing: 2px;
+} */
+.bubble-btn {
+	background-color: #008CBA;
+	color: white;
+	border: none;
+	/* border-radius: 10px; */
+	padding: 15px 34px;
+	font-size: 15px;
+	position: relative;
+	transition: transform 0.5s;
+	font-weight: bold;
+  }
+  
+  .bubble-btn:hover {
+	animation: bubble 0.6s ease-out;
+  }
+  
+  @keyframes bubble {
+	0% {
+	  transform: scale(1);
+	}
+	50% {
+	  transform: scale(1.2);
+	}
+	100% {
+	  transform: scale(1);
+	}
+  }
 .site-btn {
 	font-size: 14px;
 	color: #ffffff;
