--- a/public/assets/ui/frontend/css/style.css
+++ b/public/assets/ui/frontend/css/style.css
@@ -70,7 +70,7 @@ h6 {
 }
 
 p {
-	font-size: 16px;
+	font-size: 14px;
 	font-family: "Cairo", sans-serif;
 	color: #6f6f6f;
 	font-weight: 400;
@@ -88,9 +88,11 @@ button:focus,
 textarea:focus {
 	outline: none;
 }
-a{
+
+a {
 	text-decoration: none;
 }
+
 a:hover,
 a:focus {
 	text-decoration: none;
@@ -167,6 +169,7 @@ ol {
 	background: #7fad39;
 	letter-spacing: 2px;
 }
+
 /* .custom-black-btn {
 	display: inline-block;
 	font-size: 14px;
@@ -177,33 +180,33 @@ ol {
 	background: #000000;
 	letter-spacing: 2px;
 } */
-.bubble-btn {
-	background-color: #008CBA;
-	color: white;
+.b-btn {
+	width: 100%;
+	height: 50px;
+	font-weight: 600;
+	background-color: #000000;
+	margin: 10px 0px 10px 0px;
+	font-size: 20px;
+	text-transform: uppercase;
+	/* letter-spacing: 2.5px; */
+	font-weight: 600;
+	color: #ffffff;
+	font-weight: 600;
 	border: none;
-	/* border-radius: 10px; */
-	padding: 15px 34px;
-	font-size: 15px;
-	position: relative;
-	transition: transform 0.5s;
-	font-weight: bold;
-  }
-  
-  .bubble-btn:hover {
-	animation: bubble 0.6s ease-out;
-  }
-  
-  @keyframes bubble {
-	0% {
-	  transform: scale(1);
-	}
-	50% {
-	  transform: scale(1.2);
-	}
-	100% {
-	  transform: scale(1);
-	}
-  }
+	border-radius: 45px;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+	transition: all 0.3s ease 0s;
+	cursor: pointer;
+	outline: none;
+
+}
+
+.b-btn:hover {
+	background-color: #c5c5c5;
+	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
+	color: #000000;
+	transform: translateY(-7px);
+}
 .site-btn {
 	font-size: 14px;
 	color: #ffffff;
@@ -247,12 +250,14 @@ ol {
 		border: 4px solid #f44336;
 		border-left-color: transparent;
 	}
+
 	50% {
 		-webkit-transform: rotate(180deg);
 		transform: rotate(180deg);
 		border: 4px solid #7fad39;
 		border-left-color: transparent;
 	}
+
 	100% {
 		-webkit-transform: rotate(360deg);
 		transform: rotate(360deg);
@@ -267,11 +272,13 @@ ol {
 		border: 4px solid #f44336;
 		border-left-color: transparent;
 	}
+
 	50% {
 		-webkit-transform: rotate(180deg);
 		border: 4px solid #7fad39;
 		border-left-color: transparent;
 	}
+
 	100% {
 		-webkit-transform: rotate(360deg);
 		border: 4px solid #f44336;
@@ -430,11 +437,12 @@ ol {
 	display: inline-block;
 } */
 .header__top__right__auth {
-	position:absolute;
+	position: absolute;
 	display: inline-block;
 	margin-right: 40px;
 	cursor: pointer;
 }
+
 .header__top__right__auth a {
 	display: block;
 	font-size: 14px;
@@ -850,7 +858,40 @@ ol {
 	font-size: 14px;
 	color: #6f6f6f;
 }
+.hero__search__delivery{
+	margin-top: 20px;
+	float: left;
+	padding: 10px;
+	border-radius: 10px;
+	border-bottom: 5px solid #7fad39;
+}
+.hero__search__delivery__icon {
+	font-size: 20px;
+	color: #7fad39;
+	/* height: 50px;
+	width: 50px; */
+	background: #caddad;
+	line-height: 50px;
+	text-align: center;
+	border-radius: 50%;
+	float: left;
+	margin-right: 20px;
+}
 
+.hero__search__delivery__text {
+	overflow: hidden;
+}
+.hero__search__delivery__text h5 {
+	color: #7fad39;
+	font-weight: 700;
+	margin-bottom: 5px;
+
+}
+
+.hero__search__delivery__text span {
+	font-size: 14px;
+	color: #7fad39;
+}
 .hero__item {
 	height: 431px;
 	display: flex;
@@ -1792,6 +1833,28 @@ ol {
 	margin-bottom: 20px;
 }
 
+.product_details_discount__item__pic {
+	height: 500px;
+	position: relative;
+	overflow: hidden;
+	margin-bottom: 20px;
+	border-radius: 20px;
+}
+
+.product_details_discount__item__pic .product__discount__percent {
+	height: 45px;
+	width: 45px;
+	background: #7fad39;
+	border-radius: 50%;
+	font-size: 20px;
+	color: #ffffff;
+	line-height: 45px;
+	text-align: center;
+	position: absolute;
+	left: 15px;
+	top: 15px;
+}
+
 .product__details__pic__item img {
 	min-width: 100%;
 }
@@ -1827,7 +1890,7 @@ ol {
 
 .product__details__text .product__details__price {
 	font-size: 30px;
-	color: #dd2222;
+	color: #666666;
 	font-weight: 600;
 	margin-bottom: 15px;
 }
@@ -1840,14 +1903,17 @@ ol {
 	padding: 16px 28px 14px;
 	margin-right: 6px;
 	margin-bottom: 5px;
+	border-radius: 30px;
 }
 
 .product__details__text .heart-icon {
 	display: inline-block;
-	font-size: 16px;
-	color: #6f6f6f;
+	font-size: 18px;
+	color: #fc0000;
 	padding: 13px 16px 13px;
-	background: #f5f5f5;
+	background: #ffe8e8;
+	border-radius: 45px;
+	margin-left: 40px;
 }
 
 .product__details__text ul {
@@ -1895,12 +1961,13 @@ ol {
 
 .pro-qty {
 	width: 140px;
-	height: 50px;
+	height: 55px;
 	display: inline-block;
 	position: relative;
 	text-align: center;
-	background: #f5f5f5;
+	background: #caddad;
 	margin-bottom: 5px;
+	border-radius: 30px;
 }
 
 .pro-qty input {
@@ -1910,12 +1977,12 @@ ol {
 	color: #6f6f6f;
 	width: 50px;
 	border: none;
-	background: #f5f5f5;
+	background: #caddad;
 	text-align: center;
 }
 
 .pro-qty .qtybtn {
-	width: 35px;
+	width: 25px;
 	font-size: 16px;
 	color: #6f6f6f;
 	cursor: pointer;
@@ -2370,6 +2437,7 @@ ol {
 .checkout__order .checkout__order__subtotal span {
 	float: right;
 }
+
 .checkout__order .checkout__order__discount {
 	font-size: 15px;
 	color: #6f6f6f;
@@ -2384,6 +2452,7 @@ ol {
 .checkout__order .checkout__order__discount span {
 	float: right;
 }
+
 .checkout__order .checkout__order__delivery_fee {
 	font-size: 15px;
 	color: #7fad39;
@@ -3054,13 +3123,15 @@ ol {
 	font-size: 18px;
 	letter-spacing: 2px;
 }
+
 /* Custome */
 .cart-item-image {
-    width: 100px;
-    height: 100px;
-    object-fit:contain; /* Preserve aspect ratio and fill the container */
-    display: block;
-    margin: 0 auto;
+	width: 100px;
+	height: 100px;
+	object-fit: contain;
+	/* Preserve aspect ratio and fill the container */
+	display: block;
+	margin: 0 auto;
 }
 
 
@@ -3079,24 +3150,31 @@ ol {
 	.header__menu ul li {
 		margin-right: 45px;
 	}
+
 	.hero__search__form {
 		width: 490px;
 	}
+
 	.hero__categories__all {
 		padding: 10px 25px 10px 20px;
 	}
+
 	.hero__categories ul {
 		padding-left: 20px;
 	}
+
 	.latest-product__slider.owl-carousel .owl-nav {
 		right: 0;
 	}
+
 	.product__details__tab .nav-tabs:before {
 		width: 265px;
 	}
+
 	.product__details__tab .nav-tabs:after {
 		width: 265px;
 	}
+
 	.shoping__discount form input {
 		width: 240px;
 	}
@@ -3108,35 +3186,65 @@ ol {
 	.hero__categories {
 		margin-bottom: 30px;
 	}
+
 	.hero__search__form {
 		width: 485px;
 	}
+
 	.categories__slider.owl-carousel .owl-nav button {
 		left: -20px;
 	}
+
 	.categories__slider.owl-carousel .owl-nav button.owl-next {
 		right: -20px;
 	}
+
 	.filter__sort .nice-select {
 		padding-left: 5px;
 		padding-right: 28px;
 	}
+
 	.product__details__quantity {
 		margin-bottom: 10px;
 	}
+
 	.product__details__text .primary-btn {
 		margin-bottom: 10px;
 	}
+
 	.product__details__tab .nav-tabs:before {
 		width: 150px;
 	}
+
 	.product__details__tab .nav-tabs:after {
 		width: 150px;
+	}
+	.product_details_discount__item__pic {
+		height: 280px;
+		position: relative;
+		overflow: hidden;
+		margin-bottom: 20px;
+		border-radius: 20px;
+	}
+	
+	.product_details_discount__item__pic .product__discount__percent {
+		height: 45px;
+		width: 45px;
+		background: #7fad39;
+		border-radius: 50%;
+		font-size: 20px;
+		color: #ffffff;
+		line-height: 45px;
+		text-align: center;
+		position: absolute;
+		left: 15px;
+		top: 15px;
 	}
 	.blog__details__author {
 		overflow: hidden;
 		margin-bottom: 25px;
 	}
+
 	.humberger__open {
 		display: block;
 		font-size: 22px;
@@ -3151,9 +3259,11 @@ ol {
 		right: 15px;
 		top: 22px;
 	}
+
 	.header .container {
 		position: relative;
 	}
+
 	.humberger__menu__wrapper {
 		width: 300px;
 		background: #ffffff;
@@ -3173,19 +3283,24 @@ ol {
 		-o-transition: all, 0.6s;
 		transition: all, 0.6s;
 	}
+
 	.humberger__menu__wrapper.show__humberger__menu__wrapper {
 		opacity: 1;
 		left: 0;
 	}
+
 	.humberger__menu__logo {
 		margin-bottom: 30px;
 	}
+
 	.humberger__menu__logo a {
 		display: inline-block;
 	}
+
 	.humberger__menu__contact {
 		padding: 10px 0 13px;
 	}
+
 	.humberger__menu__contact ul li {
 		font-size: 14px;
 		color: #1c1c1c;
@@ -3193,29 +3308,36 @@ ol {
 		line-height: 30px;
 		list-style: none;
 	}
+
 	.humberger__menu__contact ul li i {
 		color: #252525;
 		margin-right: 5px;
 	}
+
 	.humberger__menu__cart ul {
 		display: inline-block;
 		margin-right: 25px;
 	}
+
 	.humberger__menu__cart ul li {
 		list-style: none;
 		display: inline-block;
 		margin-right: 15px;
 	}
+
 	.humberger__menu__cart ul li:last-child {
 		margin-right: 0;
 	}
+
 	.humberger__menu__cart ul li a {
 		position: relative;
 	}
+
 	.humberger__menu__cart ul li a i {
 		font-size: 18px;
 		color: #1c1c1c;
 	}
+
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
@@ -3231,49 +3353,62 @@ ol {
 		top: 0;
 		right: -12px;
 	}
+
 	.humberger__menu__cart .header__cart__price {
 		font-size: 14px;
 		color: #6f6f6f;
 		display: inline-block;
 	}
+
 	.humberger__menu__cart .header__cart__price span {
 		color: #252525;
 		font-weight: 700;
 	}
+
 	.humberger__menu__cart {
 		margin-bottom: 25px;
 	}
+
 	.humberger__menu__widget {
 		margin-bottom: 20px;
 	}
+
 	.humberger__menu__widget .header__top__right__language {
 		margin-right: 20px;
 	}
+
 	.humberger__menu__nav {
 		display: none;
 	}
+
 	.humberger__menu__wrapper .header__top__right__social {
 		display: block;
 		margin-right: 0;
 		margin-bottom: 20px;
 	}
+
 	.humberger__menu__wrapper .slicknav_btn {
 		display: none;
 	}
+
 	.humberger__menu__wrapper .slicknav_nav .slicknav_item a {
 		border-bottom: none !important;
 	}
+
 	.humberger__menu__wrapper .slicknav_nav {
 		display: block !important;
 	}
+
 	.humberger__menu__wrapper .slicknav_menu {
 		background: transparent;
 		padding: 0;
 		margin-bottom: 30px;
 	}
+
 	.humberger__menu__wrapper .slicknav_nav ul {
 		margin: 0;
 	}
+
 	.humberger__menu__wrapper .slicknav_nav a {
 		color: #1c1c1c;
 		font-size: 16px;
@@ -3281,16 +3416,19 @@ ol {
 		margin: 0;
 		border-bottom: 1px solid #e1e1e1;
 	}
+
 	.humberger__menu__wrapper .slicknav_nav a:hover {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
 		color: #7fad39;
 	}
+
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
 		padding: 8px 0;
 	}
+
 	.humberger__menu__overlay {
 		position: fixed;
 		left: 0;
@@ -3307,19 +3445,24 @@ ol {
 		-o-transition: all, 0.6s;
 		transition: all, 0.6s;
 	}
+
 	.humberger__menu__overlay.active {
 		visibility: visible;
 	}
+
 	.header__top {
 		display: none;
 	}
+
 	.header__menu {
 		display: none;
 	}
+
 	.header__cart {
 		text-align: center;
 		padding: 10px 0 24px;
 	}
+
 	.over_hid {
 		overflow: hidden;
 	}
@@ -3331,70 +3474,90 @@ ol {
 	.hero__categories {
 		margin-bottom: 30px;
 	}
+
 	.hero__search {
 		margin-bottom: 30px;
 	}
+
 	.hero__search__form {
 		width: 100%;
 	}
+
 	.hero__search__form form input {
 		width: 100%;
 	}
+
 	.hero__search__form form .hero__search__categories {
 		display: none;
 	}
+
 	.hero__search__phone {
 		float: left;
 		margin-top: 30px;
 	}
+
 	.categories__slider.owl-carousel .owl-nav {
 		text-align: center;
 		margin-top: 40px;
 	}
+
 	.categories__slider.owl-carousel .owl-nav button {
 		position: relative;
 		left: 0;
 		top: 0;
 		-webkit-transform: translateY(0);
 	}
+
 	.categories__slider.owl-carousel .owl-nav button.owl-next {
 		right: -10px;
 	}
+
 	.footer__copyright {
 		text-align: center;
 	}
+
 	.footer__copyright__text {
 		float: none;
 		margin-bottom: 25px;
 	}
+
 	.footer__copyright__payment {
 		float: none;
 	}
+
 	.filter__item {
 		text-align: center;
 	}
+
 	.filter__option {
 		text-align: center;
 	}
+
 	.product__details__pic {
 		margin-bottom: 40px;
 	}
+
 	.product__details__tab .nav-tabs:before {
 		display: none;
 	}
+
 	.product__details__tab .nav-tabs:after {
 		display: none;
 	}
+
 	.shoping__cart__table {
 		overflow-y: auto;
 	}
+
 	.shoping__discount form input {
 		margin-bottom: 15px;
 	}
+
 	.blog__details__author {
 		overflow: hidden;
 		margin-bottom: 25px;
 	}
+
 	.humberger__open {
 		display: block;
 		font-size: 22px;
@@ -3409,9 +3572,11 @@ ol {
 		right: 15px;
 		top: 22px;
 	}
+
 	.header .container {
 		position: relative;
 	}
+
 	.humberger__menu__wrapper {
 		width: 300px;
 		background: #ffffff;
@@ -3431,19 +3596,24 @@ ol {
 		-o-transition: all, 0.6s;
 		transition: all, 0.6s;
 	}
+
 	.humberger__menu__wrapper.show__humberger__menu__wrapper {
 		opacity: 1;
 		left: 0;
 	}
+
 	.humberger__menu__logo {
 		margin-bottom: 30px;
 	}
+
 	.humberger__menu__logo a {
 		display: inline-block;
 	}
+
 	.humberger__menu__contact {
 		padding: 10px 0 13px;
 	}
+
 	.humberger__menu__contact ul li {
 		font-size: 14px;
 		color: #1c1c1c;
@@ -3451,29 +3621,36 @@ ol {
 		line-height: 30px;
 		list-style: none;
 	}
+
 	.humberger__menu__contact ul li i {
 		color: #252525;
 		margin-right: 5px;
 	}
+
 	.humberger__menu__cart ul {
 		display: inline-block;
 		margin-right: 25px;
 	}
+
 	.humberger__menu__cart ul li {
 		list-style: none;
 		display: inline-block;
 		margin-right: 15px;
 	}
+
 	.humberger__menu__cart ul li:last-child {
 		margin-right: 0;
 	}
+
 	.humberger__menu__cart ul li a {
 		position: relative;
 	}
+
 	.humberger__menu__cart ul li a i {
 		font-size: 18px;
 		color: #1c1c1c;
 	}
+
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
@@ -3489,49 +3666,62 @@ ol {
 		top: 0;
 		right: -12px;
 	}
+
 	.humberger__menu__cart .header__cart__price {
 		font-size: 14px;
 		color: #6f6f6f;
 		display: inline-block;
 	}
+
 	.humberger__menu__cart .header__cart__price span {
 		color: #252525;
 		font-weight: 700;
 	}
+
 	.humberger__menu__cart {
 		margin-bottom: 25px;
 	}
+
 	.humberger__menu__widget {
 		margin-bottom: 20px;
 	}
+
 	.humberger__menu__widget .header__top__right__language {
 		margin-right: 20px;
 	}
+
 	.humberger__menu__nav {
 		display: none;
 	}
+
 	.humberger__menu__wrapper .header__top__right__social {
 		display: block;
 		margin-right: 0;
 		margin-bottom: 20px;
 	}
+
 	.humberger__menu__wrapper .slicknav_btn {
 		display: none;
 	}
+
 	.humberger__menu__wrapper .slicknav_nav .slicknav_item a {
 		border-bottom: none !important;
 	}
+
 	.humberger__menu__wrapper .slicknav_nav {
 		display: block !important;
 	}
+
 	.humberger__menu__wrapper .slicknav_menu {
 		background: transparent;
 		padding: 0;
 		margin-bottom: 30px;
 	}
+
 	.humberger__menu__wrapper .slicknav_nav ul {
 		margin: 0;
 	}
+
 	.humberger__menu__wrapper .slicknav_nav a {
 		color: #1c1c1c;
 		font-size: 16px;
@@ -3539,16 +3729,19 @@ ol {
 		margin: 0;
 		border-bottom: 1px solid #e1e1e1;
 	}
+
 	.humberger__menu__wrapper .slicknav_nav a:hover {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
 		color: #7fad39;
 	}
+
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
 		padding: 8px 0;
 	}
+
 	.humberger__menu__overlay {
 		position: fixed;
 		left: 0;
@@ -3565,19 +3758,24 @@ ol {
 		-o-transition: all, 0.6s;
 		transition: all, 0.6s;
 	}
+
 	.humberger__menu__overlay.active {
 		visibility: visible;
 	}
+
 	.header__top {
 		display: none;
 	}
+
 	.header__menu {
 		display: none;
 	}
+
 	.header__cart {
 		text-align: center;
 		padding: 10px 0 24px;
 	}
+
 	.over_hid {
 		overflow: hidden;
 	}
@@ -3589,45 +3787,168 @@ ol {
 	.hero__search__form form .hero__search__categories {
 		display: none;
 	}
+
 	.featured__controls ul li {
 		margin-bottom: 10px;
 	}
+
 	.product__details__text ul li b {
 		width: 100px;
+		font-size: 15px;
 	}
+
+	.b-btn {
+		font-weight: 600;
+		width: 100% !important;
+		font-size: 14px;
+		text-transform: uppercase;
+		letter-spacing: 2.5px;
+		color: #ffffff;
+		background-color: #000000;
+		border: none;
+		border-radius: 45px;
+		box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+		transition: all 0.3s ease 0s;
+		cursor: pointer;
+		outline: none;
+		margin: 10px 0px 10px 0px;
+	}
+
+	.b-btn:hover {
+		background-color: #c5c5c5;
+		box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
+		color: #000000;
+		transform: translateY(-7px);
+	}
+
 	.product__details__tab .nav-tabs li {
 		margin-right: 20px;
+	}
+
+	.product_details_discount__item__pic {
+		height: 300px;
+		position: relative;
+		overflow: hidden;
+		margin-bottom: 20px;
+		border-radius: 20px;
+	}
+	.product__details__text .heart-icon {
+		display: inline-block;
+		font-size: 18px;
+		color: #fc0000;
+		padding: 15px 16px 18px;
+		background: #ffe8e8;
+		border-radius: 45px;
+		margin-left: 5px;
+	}
+	.product__details__quantity {
+		display: inline-block;
+		margin-right: 8px;
+	}
+	
+	.pro-qty {
+		width: 100px;
+		height: 55px;
+		display: inline-block;
+		position: relative;
+		text-align: center;
+		background: #caddad;
+		margin-bottom: 5px;
+		border-radius: 30px;
+	}
+	
+	.pro-qty input {
+		height: 100%;
+		width: 50%;
+		font-size: 16px;
+		color: #6f6f6f;
+		width: 40px;
+		border: none;
+		background: #caddad;
+		text-align: center;
+	}
+	
+	.pro-qty .qtybtn {
+		width: 15px;
+		font-size: 16px;
+		color: #6f6f6f;
+		cursor: pointer;
+		display: inline-block;
 	}
 	.shoping__cart__btns {
 		text-align: center;
 	}
+
 	.primary-btn.cart-btn.cart-btn-right {
 		float: none;
 		margin-top: 10px;
 	}
+
 	.shoping__checkout .primary-btn {
 		display: block;
 		text-align: center;
 		padding: 10px 15px 10px;
 	}
+
 	.map .map-inside {
 		-webkit-transform: translateX(-125px);
 		-ms-transform: translateX(-125px);
 		transform: translateX(-125px);
 	}
+
 	.map .map-inside .inside-widget {
 		width: 250px;
 	}
+
 	.product__details__tab .nav-tabs li {
 		margin-right: 15px;
 	}
+
 	.shoping__discount form input {
 		width: 100%;
 	}
+
 	.checkout__order {
 		padding: 20px;
 	}
+
 	.blog__details__hero__text h2 {
-		font-size: 24px;
+		font-size: 18px;
+	}
+	.hero__search__delivery{
+		margin-top: 20px;
+		float: left;
+		padding: 10px;
+		border-radius: 10px;
+		border-bottom: 5px solid #7fad39;
+		height: 50px;
+		width: 140px;
+	}
+	.hero__search__delivery__icon {
+		font-size: 5px;
+		color: #7fad39;
+		height: 35px;
+		width: 40px;
+		background: #caddad;
+		line-height:40px;
+		text-align: center;
+		border-radius: 50%;
+		float: left;
+		margin-right: 10px;
+	}
+	
+	.hero__search__delivery__text {
+		overflow: hidden;
+	}
+	.hero__search__delivery__text h5 {
+		color: #7fad39;
+		font-weight: 700;
+		margin-bottom: 5px;
+		font-size: 12px;
+	}
+	
+	.hero__search__delivery__text span {
+		font-size: 10px;
+		color: #7fad39;
 	}
 }
