--- a/public/backend/assets/css/style.css
+++ b/public/backend/assets/css/style.css
@@ -6011,6 +6011,51 @@ table tbody .border-bottom-warning td {
   z-index: 1;
 }
 
+.image-area {
+  position: relative;
+  width: 30%;
+  box-shadow: 0px 10px 15px 1px #6f6f6f;
+  border-radius: 20px;
+  margin-left: 15px;
+}
+
+.image-area img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 20px;
+}
+
+.remove-image {
+  display: none;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  border-radius: 10em;
+  padding: 2px 6px 3px;
+  text-decoration: none;
+  font: 700 21px/20px sans-serif;
+  background: #555;
+  border: 3px solid #fff;
+  color: #FFF;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5), inset 0 2px 4px rgba(0, 0, 0, 0.3);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+  -webkit-transition: background 0.5s;
+  transition: background 0.5s;
+}
+
+.remove-image:hover {
+  background: #E54E4E;
+  padding: 3px 7px 5px;
+  top: -11px;
+  right: -11px;
+}
+
+.remove-image:active {
+  background: #E54E4E;
+  top: -10px;
+  right: -11px;
+}
+
 /*======= Page Header css Start ======= */
 .page-wrapper .page-main-header {
   position: fixed;
