--- a/public/assets/ui/frontend/css/style.css
+++ b/public/assets/ui/frontend/css/style.css
@@ -207,6 +207,7 @@ ol {
 	color: #000000;
 	transform: translateY(-7px);
 }
+
 .site-btn {
 	font-size: 14px;
 	color: #ffffff;
@@ -516,30 +517,6 @@ ol {
 	padding: 5px 10px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .header__logo {
 	padding: 15px 0;
 }
@@ -549,13 +526,15 @@ ol {
 }
 
 .header__menu {
-	padding: 24px 0;
+	padding: 20px 0;
+	/* margin-left: 25px; */
+	margin-bottom: 20px;
 }
 
 .header__menu ul li {
 	list-style: none;
 	display: inline-block;
-	margin-right: 50px;
+	margin-right: 30px;
 	position: relative;
 }
 
@@ -722,8 +701,9 @@ ol {
 .hero__categories__all {
 	background: #7fad39;
 	position: relative;
-	padding: 10px 25px 10px 40px;
+	padding: 5px 25px 10px 30px;
 	cursor: pointer;
+	border-radius: 10px;
 }
 
 .hero__categories__all i {
@@ -749,10 +729,11 @@ ol {
 }
 
 .hero__categories ul {
-	border: 1px solid #ebebeb;
-	padding-left: 40px;
-	padding-top: 10px;
-	padding-bottom: 12px;
+	/* border: 1px solid #ebebeb; */
+	padding-left: 20px;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	border-radius: 10px;
 }
 
 .hero__categories ul li {
@@ -760,15 +741,39 @@ ol {
 }
 
 .hero__categories ul li a {
-	font-size: 16px;
-	color: #1c1c1c;
-	line-height: 39px;
+	font-size: 14px;
+	font-weight: bold;
+	color: #7fad39;
+	line-height: 30px;
+	display: block;
+}
+
+.hero__categories ul li>.child_dropdown {
+	color: #797979;
+	font-size: 11px;
+}
+
+#hover-dropdown:hover .dropdown-menu {
 	display: block;
 }
 
 .hero__search {
 	overflow: hidden;
 	margin-bottom: 30px;
+}
+
+ul.dropdown-menu.w-100 {
+	list-style: none;
+	overflow:auto;
+	width: 200px;
+	height: 270px;
+	
+}
+
+ul.dropdown-menu.w-100 li {
+	list-style: none;
+	padding-left: 20px;
+	font-weight: 400;
 }
 
 .hero__search__form {
@@ -858,13 +863,15 @@ ol {
 	font-size: 14px;
 	color: #6f6f6f;
 }
-.hero__search__delivery{
+
+.hero__search__delivery {
 	margin-top: 20px;
 	float: left;
 	padding: 10px;
 	border-radius: 10px;
 	border-bottom: 5px solid #7fad39;
 }
+
 .hero__search__delivery__icon {
 	font-size: 20px;
 	color: #7fad39;
@@ -881,6 +888,7 @@ ol {
 .hero__search__delivery__text {
 	overflow: hidden;
 }
+
 .hero__search__delivery__text h5 {
 	color: #7fad39;
 	font-weight: 700;
@@ -892,6 +900,7 @@ ol {
 	font-size: 14px;
 	color: #7fad39;
 }
+
 .hero__item {
 	height: 431px;
 	display: flex;
@@ -1894,11 +1903,13 @@ ol {
 	font-weight: 600;
 	margin-bottom: 15px;
 }
-.product__details__price p{
-	font-weight:600;
+
+.product__details__price p {
+	font-weight: 600;
 	color: #7fad39;
-	font-size:22px;
+	font-size: 22px;
 }
+
 .product__details__text p {
 	margin-bottom: 3px;
 }
@@ -1962,10 +1973,12 @@ ol {
 	display: inline-block;
 	margin-right: 6px;
 }
-.shipping-card{
+
+.shipping-card {
 	border-radius: 10px;
-	border:1px solid black
+	border: 1px solid black
 }
+
 .pro-qty {
 	width: 140px;
 	height: 55px;
@@ -3226,6 +3239,7 @@ ol {
 	.product__details__tab .nav-tabs:after {
 		width: 150px;
 	}
+
 	.product_details_discount__item__pic {
 		height: 280px;
 		position: relative;
@@ -3233,7 +3247,7 @@ ol {
 		margin-bottom: 20px;
 		border-radius: 20px;
 	}
-	
+
 	.product_details_discount__item__pic .product__discount__percent {
 		height: 45px;
 		width: 45px;
@@ -3247,6 +3261,7 @@ ol {
 		left: 15px;
 		top: 15px;
 	}
+
 	.blog__details__author {
 		overflow: hidden;
 		margin-bottom: 25px;
@@ -3267,14 +3282,17 @@ ol {
 		top: 42px;
 		border-radius: 5px;
 	}
-	img{
+
+	img {
 		width: 100%;
 	}
+
 	.hero__categories__all span {
 		font-size: 16px;
 		font-weight: 500;
 		color: #ffffff;
 	}
+
 	.header .container {
 		position: relative;
 	}
@@ -3808,17 +3826,20 @@ ol {
 		margin-right: 20px;
 		position: relative;
 	}
+
 	.breadcrumb-section {
 		display: flex;
 		align-items: center;
 		padding: 10px 0 10px;
 		border-radius: 10px;
 	}
+
 	.breadcrumb__option span {
 		display: inline-block;
 		font-size: 14px;
 		color: #ffffff;
 	}
+
 	.hero__search__form form .hero__search__categories {
 		display: none;
 	}
@@ -3826,25 +3847,31 @@ ol {
 	.featured__controls ul li {
 		margin-bottom: 10px;
 	}
+
 	.product-details {
 		padding-top: 35px;
 	}
+
 	.product__details__text ul li b {
 		width: 100px;
 		font-size: 15px;
 	}
-	.product__details__text h3{
+
+	.product__details__text h3 {
 		padding-top: 10px;
 		font-size: 20px;
 	}
-	.shipping-card{
+
+	.shipping-card {
 		border-radius: 10px;
-		border:1px solid black;
+		border: 1px solid black;
 		font-size: 12px;
 	}
+
 	.hero {
 		padding-bottom: 0px;
 	}
+
 	.b-btn {
 		font-weight: 600;
 		width: 100% !important;
@@ -3868,10 +3895,12 @@ ol {
 		color: #000000;
 		transform: translateY(-7px);
 	}
+
 	.product {
 		padding-top: 35px;
 		padding-bottom: 40px;
 	}
+
 	.product__details__tab .nav-tabs li {
 		margin-right: 20px;
 	}
@@ -3883,6 +3912,7 @@ ol {
 		margin-bottom: 20px;
 		border-radius: 20px;
 	}
+
 	.product__details__text .heart-icon {
 		display: inline-block;
 		font-size: 18px;
@@ -3892,22 +3922,25 @@ ol {
 		border-radius: 45px;
 		margin-left: 5px;
 	}
+
 	.product__details__text .product__details__price {
 		font-size: 24px;
 		color: #666666;
 		font-weight: 600;
 		margin-bottom: 15px;
 	}
-	.product__details__price p{
-		font-weight:600;
+
+	.product__details__price p {
+		font-weight: 600;
 		color: #7fad39;
-		font-size:18px;
+		font-size: 18px;
 	}
+
 	.product__details__quantity {
 		display: inline-block;
 		margin-right: 8px;
 	}
-	
+
 	.pro-qty {
 		width: 100px;
 		height: 55px;
@@ -3918,7 +3951,7 @@ ol {
 		margin-bottom: 5px;
 		border-radius: 30px;
 	}
-	
+
 	.pro-qty input {
 		height: 100%;
 		width: 50%;
@@ -3929,7 +3962,7 @@ ol {
 		background: #caddad;
 		text-align: center;
 	}
-	
+
 	.pro-qty .qtybtn {
 		width: 15px;
 		font-size: 16px;
@@ -3937,6 +3970,7 @@ ol {
 		cursor: pointer;
 		display: inline-block;
 	}
+
 	.shoping__cart__btns {
 		text-align: center;
 	}
@@ -3977,6 +4011,7 @@ ol {
 	.blog__details__hero__text h2 {
 		font-size: 18px;
 	}
+
 	.hero__search__phone__icon {
 		font-size: 14px;
 		color: #7fad39;
@@ -3990,7 +4025,8 @@ ol {
 		margin-right: 10px;
 		margin-top: 3px;
 	}
-	.hero__search__delivery{
+
+	.hero__search__delivery {
 		margin-top: 20px;
 		float: left;
 		padding: 10px;
@@ -3999,62 +4035,72 @@ ol {
 		height: 50px;
 		width: 140px;
 	}
+
 	.hero__search__delivery__icon {
 		font-size: 5px;
 		color: #7fad39;
 		height: 35px;
 		width: 40px;
 		background: #caddad;
-		line-height:40px;
+		line-height: 40px;
 		text-align: center;
 		border-radius: 50%;
 		float: left;
 		margin-right: 10px;
 	}
-	
+
 	.hero__search__delivery__text {
 		overflow: hidden;
 	}
+
 	.hero__search__delivery__text h5 {
 		color: #7fad39;
 		font-weight: 700;
 		margin-bottom: 5px;
 		font-size: 12px;
 	}
+
 	.hero__categories {
 		margin-bottom: 20px;
 		border-radius: 10px;
 	}
+
 	.hero__categories__all {
 		background: #7fad39;
 		position: relative;
 		padding: 4px 12px 10px 10px;
 		cursor: pointer;
 	}
+
 	.hero__categories__all span {
 		font-size: 16px;
 		font-weight: 500;
 		color: #ffffff;
 	}
+
 	.hero__search__delivery__text span {
 		font-size: 10px;
 		color: #7fad39;
 	}
+
 	.hero__categories ul li a {
 		font-size: 13px;
 		color: #1c1c1c;
 		line-height: 34px;
 		display: block;
 	}
+
 	.hero__search__phone__text h5 {
 		color: #1c1c1c;
 		font-weight: 700;
 		margin-bottom: 5px;
 		font-size: 15px;
 	}
-	.hero__search{
+
+	.hero__search {
 		margin-bottom: 5px;
 	}
+
 	.humberger__open {
 		display: block;
 		font-size: 22px;
